finished mongo example exercise
